--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-182.6KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-631.5KB/s(Youtube:不良林), server: 18.183.213.25, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇸🇬 新加坡-1.35MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.76MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇧🇷 巴西-2.25MB/s(Youtube:不良林), server: fr.n.optage.moe, port: 44612, type: trojan, password: 12dbfb53-1249-47e6-bf2c-795a92727034, sni: fr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.69MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇰🇷 韩国-1.24MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.50MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-441.1KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇨🇳 中国-741.2KB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 44041, type: ss, cipher: chacha20-ietf-poly1305, password: 297545c2-a59d-4610-9580-a7baa3657a57}
+  - {name: 🇨🇳 中国-456.2KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.94MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-778.8KB/s(Youtube:不良林), server: 18.183.213.25, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
