--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.95MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-418.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-456.2KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-741.2KB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 44041, type: ss, cipher: chacha20-ietf-poly1305, password: 297545c2-a59d-4610-9580-a7baa3657a57}
-  - {name: 🇯🇵 日本-778.8KB/s(Youtube:不良林), server: 18.183.213.25, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-223.6KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-441.1KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇯🇵 日本-5.11MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-418.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-741.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-418.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
